# isawaArtnet

./: .gitignore  LICENSE  README.md  isawaArtnet.py  pyproject.toml
.github/workflows/: publish.yml
src/isawaartnet/: __init__.py  core.py
